--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
 
 		<link rel="stylesheet" href="public/css/index.css">
 
-		<link rel="stylesheet" href="public/css/index.css">
-
 		<!-- Printing and PDF exports -->
 		<script>
 			var link = document.createElement( 'link' );
@@ -42,12 +40,16 @@
 			<div class="slides">
 				<section>
 					<h1>準備中</h1>
+					<aside class="notes" src='public/md/1.md' data-markdown></aside>
+				</section>
+				<section>
+					<h1>準備中2</h1>
+					<aside class="notes">
+					カンペテスト2
+					</aside>
 				</section>
 			</div>
-
 		</div>
-
-		<div id="viewArea" class="viewArea"></div>
 
 		<script src="public/lib/js/head.min.js"></script>
 		<script src="public/js/reveal.js"></script>
