--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<title>準備中</title>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
+		<link rel="shortcut icon" type="image/png" href="public/image/icon.png">
 
 		<link rel="stylesheet" href="public/css/reveal.css">
 		<link rel="stylesheet" href="public/css/theme/beige.css" id="theme">
@@ -28,7 +29,9 @@
 		<!--[if lt IE 9]>
 		<script src="lib/js/html5shiv.js"></script>
 		<![endif]-->
+
 		<script src='public/lib/jquery/jquery-3.1.1.min.js'></script>
+		<script src='public/plugin/markdown/marked.js'></script>
 
 	</head>
 
