--- a/index.html
+++ b/index.html
@@ -42,14 +42,31 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>準備中</h1>
+					<h1>CSSの話</h1>
+					<h2>CSS Grid Layout</h2>
 					<aside class="notes" src='public/md/1.md' data-markdown></aside>
 				</section>
 				<section>
-					<h1>準備中2</h1>
-					<aside class="notes">
-					カンペテスト2
-					</aside>
+					<h3>CSS Grid Layoutとは</h3>
+					<blockquote>
+This CSS module defines a two-dimensional grid-based layout system, optimized for user interface design.
+In the grid layout model, the children of a grid container can be positioned into arbitrary slots in a predefined flexible or fixed-size layout grid.
+					</blockquote>
+					<a href="https://www.w3.org/TR/css3-grid-layout/">w3cのとこから引用</a>
+					<aside class="notes" src='public/md/2.md' data-markdown></aside>
+				</section>
+				<section>
+					<section>
+						<h3>まずはやってみる</h3>
+						<a href="http://codepen.io/tmiura/pen/KWyBye">■</a>
+						<aside class="notes" src='public/md/3.md' data-markdown></aside>
+					</section>
+				</section>
+				<section>
+					<h1>おわり</h1>
+					<a href="https://developer.mozilla.org/ja/docs/Web/CSS/CSS_Grid_Layout">気になる人のための参考MDN</a>
+					<br/>
+					<a href="https://github.com/tttmiura/tttmiura.study-group">■</a>
 				</section>
 			</div>
 		</div>
