サンプル追加

--- a/index.html
+++ b/index.html
@@ -57,9 +57,19 @@ In the grid layout model, the children of a grid container can be positioned int
 				</section>
 				<section>
 					<section>
-						<h3>まずはやってみる</h3>
+						<h3>サンプル１</h3>
 						<a href="http://codepen.io/tmiura/pen/KWyBye">■</a>
 						<aside class="notes" src='public/md/3.md' data-markdown></aside>
+					</section>
+					<section>
+						<h3>サンプル２</h3>
+						<a href="http://codepen.io/tmiura/pen/yMpERM">■</a>
+						<aside class="notes" src='public/md/4.md' data-markdown></aside>
+					</section>
+					<section>
+						<h3>サンプル３</h3>
+						<a href="http://codepen.io/tmiura/pen/VpydOR">■</a>
+						<aside class="notes" src='public/md/5.md' data-markdown></aside>
 					</section>
 				</section>
 				<section>
