カンペ修正

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ In the grid layout model, the children of a grid container can be positioned int
 					<a href="https://developer.mozilla.org/ja/docs/Web/CSS/CSS_Grid_Layout">気になる人のための参考MDN</a>
 					<br/>
 					<a href="https://github.com/tttmiura/tttmiura.study-group">■</a>
+					<aside class="notes" src='public/md/e.md' data-markdown></aside>
 				</section>
 			</div>
 		</div>
